--- a/WPFPrototypeReverie/Pages/TestScene2.xaml
+++ b/WPFPrototypeReverie/Pages/TestScene2.xaml
@@ -1,19 +1,19 @@
-﻿<Page x:Class="WPFPrototypeReverie.TestScene"
+﻿<Page x:Class="WPFPrototypeReverie.TestScene2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
-      Title="TestScene" Height="720" Width="1280">
-    <Grid Margin="0,0,0,-35">
+      Title="TestScene2" Height="720" Width="1280">
+    <Grid Margin="0,0,0,-49">
         <Grid.Background>
-            <ImageBrush ImageSource="C:\Users\Jack\source\repos\WPFPrototypeReverie\Railroad.jpg"/>
+            <ImageBrush ImageSource="C:\Users\Jack\source\repos\WPFPrototypeReverie\Taters.jpg"/>
         </Grid.Background>
         <TextBlock x:Name="TestText" HorizontalAlignment="Left" Height="620" Margin="36,38,0,0" TextWrapping="Wrap" 
                    Text="" VerticalAlignment="Top" Width="1204" Background="#B9292727" FontSize="18" 
                    FontFamily="Open Sans SemiBold" Padding="8,2">
         </TextBlock>
-        <Label x:Name="NextLabel" Content="Click for the next page" HorizontalAlignment="Left" Margin="1047,681,0,0" 
-               VerticalAlignment="Top" Width="207" FontSize="18"  FontFamily="Open Sans SemiBold" MouseLeftButtonUp="NextLabel_MouseLeftButtonUp"/>
+        <Label x:Name="NextLabel" Content="Click for the next page" HorizontalAlignment="Left" Margin="1047,676,0,0" 
+            VerticalAlignment="Top" Width="223" FontSize="18"  FontFamily="Open Sans SemiBold" MouseLeftButtonUp="NextLabel_MouseLeftButtonUp"/>
     </Grid>
 </Page>
